Cambio para arreglar la distribucion de los objetos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 altura-completa">
+            <div class="col-4 altura-completa d-flex flex-column justify-content-around">
                 <div class="row">
                     <div class="col-12" id="redes">
                         <h3><b>Redes Sociales</b></h3>
